tests/parsing/cmc/errors/123.expected
File "tests/parsing/cmc/errors/123.cmc", line 1, character 25-26:
1 | (define-system sys :input)
                             ^
Error while parsing a system input definition, read a closing parenthesis,
      but expected a list of sorted variables.
